@@ -743,7 +743,10 @@ defect and two incompleteness defects. Very slight INCOMPATIBILITY.
 Isabelle/Scala session (instead of an external Java process): this
 improves reactivity and saves resources. This experimental feature is
 guarded by system option "kodkod_scala" (default: true in PIDE
-interaction, false in batch builds).
+interaction, false in batch builds) or configuration option within the
+theory context; it may be changed locally like this:
+
+  declare [[kodkod_scala = false]]
 
 * Simproc "defined_all" and rewrite rule "subst_all" perform more
 aggressive substitution with variables from assumptions.
